Mridul | Fix to display output in alphabetical order